biocomplexity/templates/dismolib/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dismolib-deployment
  namespace: biocomplexity
  labels:
    app: dismolib
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dismolib
  template:
    metadata:
      labels:
        app: dismolib
    spec:
      containers:
      - name: dismolib-container
        image: ghcr.io/nssac/dismolib:latest
        ports:
        - containerPort: 3838
