biocomplexity/templates/dismolib/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dismolib-service
  namespace: biocomplexity
spec:
  selector:
    app: dismolib
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3838
